@@ -1366,7 +1366,7 @@
                             <TextRun>
                               <Value>=Sum(Fields!RENEW_PRINCIPAL.Value)</Value>
                               <Style>
-                                <Format>'$'#,0.00;('$'#,0.00);'-'</Format>
+                                <Format>#,0.00;(#,0.00);'-'</Format>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -1386,9 +1386,9 @@
                         <PaddingRight>2pt</PaddingRight>
                         <PaddingTop>2pt</PaddingTop>
                         <PaddingBottom>2pt</PaddingBottom>
-                        <rd:FormatSymbolCulture>en-US</rd:FormatSymbolCulture>
                       </Style>
                     </Textbox>
+                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell>
